--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "archiver": "^7.0.1",
     "next": "14.2.16",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-force-graph-2d": "^1.29.0"
   },
   "devDependencies": {
     "@types/node": "^20",
