--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
+    "@google/genai": "^1.34.0",
     "@prisma/client": "^5.22.0",
     "@types/archiver": "^7.0.0",
     "archiver": "^7.0.1",
