--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.22.0",
     "@types/archiver": "^7.0.0",
     "archiver": "^7.0.1",
+    "lucide-react": "^0.562.0",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
