--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/archiver": "^7.0.0",
     "archiver": "^7.0.1",
     "lucide-react": "^0.562.0",
+    "masonic": "^4.1.0",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
